--- a/babadan.html
+++ b/babadan.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Warkop Babadan</title>
 	<link rel="stylesheet" href="uts.css"> <!--Link ke file CSS -->
-	<link rel="icon" href="/uts/images/logo.jpg">
+	<link rel="icon" href="/warkop/images/logo.jpg">
 </head>
 <body>
 	<nav>
@@ -43,7 +43,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="/uts/images/logo.jpg">
+            <img src="/warkop/images/logo.jpg">
             <div class="wellcome">
                 <h2 class="visit">Wellcome To Our Website</h2>
                 <p>I hope you can visit our place and enjoy everything available for purchase</p>
@@ -51,7 +51,7 @@
         </section>
     	<!-- untuk about -->
         <section id="about">
-            <img src="/uts/images/warkop.jpg">
+            <img src="/warkop/images/warkop.jpg">
             <div class="kolom">
                 <h2 class="deskripsi">About Me</h2>
                 <p>Warung kopi lokal, independen dan kekinian yang siap menemani aktivitasmu sehari-hari dengan penuh gairah dan semangat. Lokasi warung kopi kami ada di sebelum pintu keluar komplek perumahan Banjar Wijaya, tepatnya di area Taman Banjar Wijaya. 
@@ -122,23 +122,23 @@
                     <p>Suasana Warkop dan Beberapa Foto Makanan dan Minuman</p>
 	                <div class="gallery-list">
 	                    <div class="kartu-gallery">
-	                        <img src="/uts/images/tampakdalam.jpg">
+	                        <img src="/warkop/images/tampakdalam.jpg">
 	                        <p>Tampak Dalam</p>
 	                    </div>
 	                    <div class="kartu-gallery">
-	                        <img src="/uts/images/suasana.jpg">
+	                        <img src="/warkop/images/suasana.jpg">
 	                        <p>Suasana Malam</p>
 	                    </div>
 	                    <div class="kartu-gallery">
-	                        <img src="/uts/images/dekorasi.jpg">
+	                        <img src="/warkop/images/dekorasi.jpg">
 	                        <p>Hiasan Estetik</p>
 	                    </div>
 	                    <div class="kartu-gallery">
-	                        <img src="/uts/images/rotibakar.jpg">
+	                        <img src="/warkop/images/rotibakar.jpg">
 	                        <p>Roti Bakar</p>
 	                    </div>
 	                    <div class="kartu-gallery">
-	                        <img src="/uts/images/jahe.jpg">
+	                        <img src="/warkop/images/jahe.jpg">
 	                        <p>Susu Jahe</p>
 	                    </div>
 	                </div>
@@ -153,12 +153,12 @@
                     <h3>Nobar Bola</h3>
                 	<p>Nobar sering diadakan ketika timnas sedang bermain. Dan tentunya selalu ramai yang ingin menonton atau sekedar minum dan mengobrol. Sangat menyenangkan apabila kita menonton bersama sambil minum dan nyemil di Warkop</p>
                 	<video width="200" controls autoplay muted>
-				            <source src="/uts/images/nobar2.mp4" type="video/mp4">
+				            <source src="/warkop/images/nobar2.mp4" type="video/mp4">
 				        	</video>
 	                        <p>Suasana Nobar</p>
                 	<h3>Live Music</h3>
                 	<p>Live Music diadakan setiap malam minggu, menemani malam minggu mu dengan sang kekasih sambil bercerita dengan segelas kopi atau es teh dan juga menikmati cireng atau roti bakar.</p>
-	                        <img src="/uts/images/livemusic.jpg" style="margin: 10px; padding: 10px; width: 250px; height: 250px;">
+	                        <img src="/warkop/images/livemusic.jpg" style="margin: 10px; padding: 10px; width: 250px; height: 250px;">
 	                        <p>Live Music</p>
 	                    </div>
 	                </div>
